--- a/cloudfoundry-client-lib/pom.xml
+++ b/cloudfoundry-client-lib/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudfoundry</groupId>
 	<artifactId>cloudfoundry-client-lib</artifactId>
-	<version>1.1.6</version>
+	<version>1.1.7.mprm</version>
 	<packaging>jar</packaging>
 	<name>Cloud Foundry Java Client Library</name>
 	<description>A Cloud Foundry client library for Java</description>
-	<url>http://github.com/cloudfoundry/cf-java-client</url>
+	<url>http://github.com/zlatozar/cf-java-client</url>
 
 	<licenses>
 		<license>
@@ -447,4 +447,15 @@
 		</developer>
 	</developers>
 
+    <distributionManagement>
+      <repository>
+        <id>${releasesId}</id>
+        <url>${releasesUrl}</url>
+      </repository>
+      <snapshotRepository>
+        <id>${snapshotsId}</id>
+        <url>${snapshotsUrl}</url>
+      </snapshotRepository>
+    </distributionManagement>
+    
 </project>
